# off-belief-learning

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  get_pybind_flags.py
hanabi-learning-environment/: CMakeLists.txt  pyhanabi.cc
hanabi-learning-environment/hanabi_lib/: canonical_encoders.cc  canonical_encoders.h  canonical_encoders_extra.cc  hanabi_card.cc  hanabi_card.h  hanabi_game.cc  hanabi_game.h  hanabi_hand.cc  hanabi_hand.h  hanabi_move.h  hanabi_observation.cc  hanabi_observation.h  hanabi_state.cc  hanabi_state.h  observation_encoder.h
models/: download.sh
pyhanabi/: README.md  __init__.py  act_group.py  belief_model.py  best_response.py  create.py  eval.py  finesse.py  legacy_agent.py  net.py  r2d2.py  rl_search.py  selfplay.py  set_path.py  sparta.py  supervised_learn.py  supervised_model.py  sync_klr_launcher.py  sync_kly_launcher.py  train_belief.py  utils.py
pyhanabi/bot/: README.md  agent.py  bot_factory.py  game_state.py  hanabi_client.py  main.py  match_player.py
pyhanabi/common_utils/: __init__.py  assert_utils.py  helper.py  logger.py  model_ckpt.py  multi_counter.py  saver.py  stopwatch.py
pyhanabi/scripts/: belief.sh  belief_obl0.sh  belief_obl1.sh  iql.sh  obl1.sh  obl2.sh
pyhanabi/tools/: README.md  __init__.py  action_matrix.py  analyze_sweep.py  convert_model.py  cross_play.py  dataset_stats.py  eval_model.py  extract_human_data.py  find_best_models.py  game_exporter.py  model_zoo.py  parse_handshake.py  parse_log.py  play_and_find_finesse.py  plot.py  print_pickle_game.py  run_game.py  run_human_game.py  sandbox.py
rela/: CMakeLists.txt  README.md  batch_runner.cc  batch_runner.h  batcher.cc  batcher.h  context.cc  context.h  prioritized_replay.h  pybind.cc  r2d2.h  tensor_dict.h  thread_loop.h  transition.cc  transition.h  utils.h
rlcc/: clone_data_generator.cc  clone_data_generator.h  hanabi_env.h  pybind.cc  r2d2_actor.cc  r2d2_actor.h  thread_loop.h  utils.cc  utils.h
searchcc/: finesse.cc  finesse.h  game_sim.h  hand_dist.cc  hand_dist.h  hybrid_model.cc  hybrid_model.h  rl_search.cc  rl_search.h  sim_actor.cc  sim_actor.h  sparta.cc  sparta.h  thread_loop.cc  thread_loop.h
